required, add to mongo, model.isValid

--- a/PubDBApplication/PubDBApplication/Views/OrdersViews/Index.cshtml
+++ b/PubDBApplication/PubDBApplication/Views/OrdersViews/Index.cshtml
@@ -231,7 +231,38 @@
 
         @using (var db = new PubDBApplication.Models.PubDBEntities())
         {
-            var q = (from x in db.getSaleStatistics(7) select x).ToList();
+
+            var q = (from x in db.getSaleStatistics(1) select x).ToList();
+
+            for (int i = 0; i < q.Count(); i++)
+            {
+                <tr>
+                    <td><b>Last day</b></td>
+                    <td>
+                        @q[i].minOrderAmount.ToString("0.00")
+                    </td>
+                    <td>
+                        @q[i].maxOrderAmount.ToString("0.00")
+                    </td>
+                    <td>
+                        @q[i].avgOrderAmount.ToString("0.00")
+                    </td>
+                    <td>
+                        @q[i].sumOrderAmount.ToString("0.00")
+                    </td>
+                    <td>
+                        @q[i].servedCustomers
+                    </td>
+                    <td>
+                        @q[i].totalSoldQuantity
+                    </td>
+                    <td>
+                        @q[i].mostPopularProduct
+                    </td>
+                </tr>
+            }
+
+             q = (from x in db.getSaleStatistics(7) select x).ToList();
 
 
             for (int i = 0; i < q.Count(); i++)
@@ -262,10 +293,9 @@
                     </td>
                 </tr>
             }
-        }
-        @using (var db = new PubDBApplication.Models.PubDBEntities())
-        {
-            var q = (from x in db.getSaleStatistics(30) select x).ToList();
+
+
+             q = (from x in db.getSaleStatistics(30) select x).ToList();
 
 
             for (int i = 0; i < q.Count(); i++)
@@ -295,11 +325,8 @@
                     </td>
                 </tr>
             }
-        }
-        @using (var db = new PubDBApplication.Models.PubDBEntities())
-        {
-            var q = (from x in db.getSaleStatistics(90) select x).ToList();
 
+            q = (from x in db.getSaleStatistics(90) select x).ToList();
 
             for (int i = 0; i < q.Count(); i++)
             {
