most popular producers

--- a/PubDBApplication/PubDBApplication/Views/Pubs/Details.cshtml
+++ b/PubDBApplication/PubDBApplication/Views/Pubs/Details.cshtml
@@ -62,7 +62,7 @@
 
 @{
     <h3>Customer purchase statistics</h3>
-    <h4>Raport based only on completed orders</h4>
+    <h4>Raport based only on completed and not older than one month orders</h4>
 
 
     using (var db = new PubDBApplication.Models.PubDBEntities())
